# PKU-AI-TA

./: .env.example  .gitignore  AGENTS.md  README.md  config.py  debug_courses.html  main.py  models.py  pyproject.toml  rubric_hw2-2.md
auth/: iaaa.py
crawler/: blackboard.py  pku_homework.py
prompts/: system_en.md  system_zh.md
review/: __init__.py  selection_tui.py  spreadsheet.py  tui.py  tui_components.py
scorer/: codex_cli.py  llm.py
scorer/parsers/: __init__.py  text.py
submitter/: blackboard.py
tests/: test_auth.py  test_blackboard_crawler.py  test_blackboard_submitter.py  test_codex_cli_scorer.py  test_models.py  test_pku_homework_crawler.py  test_review_editing.py  test_scorer_llm.py  test_selection_tui.py  test_spreadsheet.py
